--- a/src/app/[locale]/globals.css
+++ b/src/app/[locale]/globals.css
@@ -7,3 +7,6 @@
   border-color: rgb(215, 215, 215) !important;
   color: rgb(215, 215, 215) !important;
 }
+.ant-select-selection-item {
+  color: white !important;
+}
